// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`從 JSON Schema 提取默認值 應該與 DEFAULT_CONFIG 等價 1`] = `
{
  "background": {
    "auto_resume": {
      "enabled": false,
      "max_retries": 3,
      "on_error": "ignore",
      "retry_delay": 5000,
      "safety_prompt": 
"請依序檢查：
1. 若後續任務明確可行，繼續執行
2. 若存在潛在風險（如破壞性變更、資料遺失、安全疑慮、或將更動專案外檔案），請先停止並說明風險，請求用戶確認
3. 若需求模糊或資訊不足，請停止並說明疑點，請求用戶澄清
4. 若非用戶明確要求撤銷更改或刪除檔案，請先詢問用戶，獲得許可後才執行

**若任務已完成，請複查並總結結果後結束**

Check in order:
1. If the next step is clear and actionable, proceed.
2. If potential risks exist (e.g., destructive changes, data loss, security concerns, or modifying files outside the project), stop, explain the risks, and request confirmation.
3. If requirements are ambiguous or information is insufficient, stop, state the uncertainty, and request clarification.
4. Unless the user explicitly requests to revert changes or delete files, always ask for permission first and only proceed after obtaining user consent.

**If the task is complete, review and summarize the results, then end.**"
,
      "target": "background",
    },
    "poll_interval": 2000,
    "retry_delay_increment": 5000,
    "retry_delay_max": 60000,
  },
  "banner_every_session": false,
  "compaction": {
    "preserve_todos": true,
    "threshold_percent": 80,
  },
  "debug": {
    "enabled": false,
    "level": "warn",
  },
  "output_shaping": {
    "max_chars": 12000,
    "preserve_errors": true,
  },
  "show_banner": true,
}
`;

exports[`從 Zod Schema 直接提取默認值 應該與 DEFAULT_CONFIG 等價 1`] = `
{
  "background": {
    "auto_resume": {
      "enabled": false,
      "max_retries": 3,
      "on_error": "ignore",
      "prompts": {},
      "retry_delay": 5000,
      "safety_prompt": 
"請依序檢查：
1. 若後續任務明確可行，繼續執行
2. 若存在潛在風險（如破壞性變更、資料遺失、安全疑慮、或將更動專案外檔案），請先停止並說明風險，請求用戶確認
3. 若需求模糊或資訊不足，請停止並說明疑點，請求用戶澄清
4. 若非用戶明確要求撤銷更改或刪除檔案，請先詢問用戶，獲得許可後才執行

**若任務已完成，請複查並總結結果後結束**

Check in order:
1. If the next step is clear and actionable, proceed.
2. If potential risks exist (e.g., destructive changes, data loss, security concerns, or modifying files outside the project), stop, explain the risks, and request confirmation.
3. If requirements are ambiguous or information is insufficient, stop, state the uncertainty, and request clarification.
4. Unless the user explicitly requests to revert changes or delete files, always ask for permission first and only proceed after obtaining user consent.

**If the task is complete, review and summarize the results, then end.**"
,
      "target": "background",
    },
    "poll_interval": 2000,
    "retry_delay_increment": 5000,
    "retry_delay_max": 60000,
  },
  "banner_every_session": false,
  "collaborate": {},
  "compaction": {
    "preserve_todos": true,
    "threshold_percent": 80,
  },
  "debug": {
    "enabled": false,
    "level": "warn",
  },
  "output_shaping": {
    "max_chars": 12000,
    "preserve_errors": true,
  },
  "show_banner": true,
}
`;
